tests/k8s_testcases/network-policy-checks-bad-path/endport_wrong_range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: endport-test-wrong-range
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0
      ports:
        - port: 53
          protocol: UDP
          endPort: 0
